--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/Aizeke/FriendFinder-App#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jquery": "^3.4.1",
+    "jsdom": "^15.1.1",
+    "path": "^0.12.7"
   }
 }
